[project]
name = "blogagentic"
version = "0.1.0"
description = "Blog generation agentic AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "langchain>=1.0.2",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.1",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
