[project]
name = "blogagentic"
version = "0.1.0"
description = "Blog generation agentic AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.120.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "langchain>=1.0.2",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.1",
    "mangum>=0.19.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
